# dirigo-strip-acquisition

./: README.md  pyproject.toml
dirigo_strip_acquisition/: __init__.py  acquisitions.py  analysis.py  calibrations.py  dirigo_strip_acquisition.py  displays.py  loggers.py  processors.py  writers.py
scripts/: 3d_stack.py  calibrate_line_distortion.py  check_strip_overlap.py  estimate_illumination_gradient.py  estimate_line_gradient.py
tests/: line camera.py  raster scanner.py  rotate.py  test.py
