[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_strip_acquisition"
version = "0.1.0"
description = "Plugin for strip acquisitions in Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
dependencies = []

[project.entry-points."dirigo_acquisitions"]
point_scan_strip = "dirigo_strip_acquisition:PointScanStripAcquisition"
line_scan_camera_strip = "dirigo_strip_acquisition:LineScanCameraStripAcquisition"

[project.entry-points."dirigo_processors"]
point_scan_strip = "dirigo_strip_acquisition:StripProcessor"
strip_stitcher = "dirigo_strip_acquisition:StripStitcher"

[project.entry-points."dirigo_loggers"]
pyramid = "dirigo_strip_acquisition:PyramidLogger"