[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_strip_acquisition"
version = "0.1.0"
description = "Plugin for strip acquisitions in Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
dependencies = []

[project.entry-points."dirigo_acquisitions"]
raster_scan_stitched = "dirigo_strip_acquisition:RasterScanStitchedAcquisition"
line_camera_stitched = "dirigo_strip_acquisition:LineCameraStitchedAcquisition"

[project.entry-points."dirigo_processors"]
strip = "dirigo_strip_acquisition:StripProcessor"
strip_stitcher = "dirigo_strip_acquisition:StripStitcher"
tile_builder = "dirigo_strip_acquisition:TileBuilder"

[project.entry-points."dirigo_loggers"]
pyramid = "dirigo_strip_acquisition:PyramidLogger"
strip_translation_calibration = "dirigo_strip_acquisition.calibrations:StripTranslationCalibrationLogger"
